--- a/plugins/woocommerce/package.json
+++ b/plugins/woocommerce/package.json
@@ -51,7 +51,7 @@
 		"test:api-pw": "USE_WP_ENV=1 pnpm playwright test --config=tests/api-core-tests/playwright.config.js",
 		"test:e2e-pw": "USE_WP_ENV=1 pnpm playwright test --config=tests/e2e-pw/playwright.config.js",
 		"test:e2e-sample": "pnpm test:e2e-pw ./tests/e2e-pw/tests/merchant/product-edit.spec.js ./tests/e2e-pw/tests/merchant/product-delete.spec.js",
-		"test:perf": "./k6 run plugins/woocommerce/tests/performance/tests/gh-action-pr-requests.js",
+		"test:perf": "./k6 run ./tests/performance/tests/gh-action-pr-requests.js",
 		"test:env:start": "pnpm env:test",
 		"test:php": "./vendor/bin/phpunit -c ./phpunit.xml",
 		"test:php:watch": "./vendor/bin/phpunit-watcher watch",
